Test avec le fichier